logs/aiohttp-login.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/.libs_cffi_backend'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/WTForms-2.1.egg-info'...
Listing './lib/python3.5/site-packages/aiohttp'...
Listing './lib/python3.5/site-packages/aiohttp-2.3.7.dist-info'...
Listing './lib/python3.5/site-packages/aiohttp_jinja2'...
Listing './lib/python3.5/site-packages/aiohttp_jinja2-0.14.0.dist-info'...
Listing './lib/python3.5/site-packages/aiohttp_login'...
Listing './lib/python3.5/site-packages/aiohttp_login/templates'...
Listing './lib/python3.5/site-packages/aiohttp_login/templates/bootstrap-3'...
Listing './lib/python3.5/site-packages/aiohttp_login/templates/bootstrap-4'...
Listing './lib/python3.5/site-packages/aiohttp_login/templates/common'...
Listing './lib/python3.5/site-packages/aiohttp_login-1.3.0.egg-info'...
Listing './lib/python3.5/site-packages/aiohttp_session'...
Listing './lib/python3.5/site-packages/aiohttp_session-2.1.0.dist-info'...
Listing './lib/python3.5/site-packages/aiosmtplib'...
Listing './lib/python3.5/site-packages/aiosmtplib-1.0.2.dist-info'...
Listing './lib/python3.5/site-packages/asn1crypto'...
Listing './lib/python3.5/site-packages/asn1crypto/_perf'...
Listing './lib/python3.5/site-packages/asn1crypto-0.24.0.dist-info'...
Listing './lib/python3.5/site-packages/async_timeout'...
Listing './lib/python3.5/site-packages/async_timeout-2.0.0.dist-info'...
Listing './lib/python3.5/site-packages/cffi'...
Listing './lib/python3.5/site-packages/cffi-1.11.3.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/cryptography'...
Listing './lib/python3.5/site-packages/cryptography/hazmat'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/backends'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/backends/openssl'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/bindings'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/bindings/openssl'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/asymmetric'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/ciphers'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/kdf'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/twofactor'...
Listing './lib/python3.5/site-packages/cryptography/x509'...
Listing './lib/python3.5/site-packages/cryptography-2.1.4.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/multidict'...
Listing './lib/python3.5/site-packages/multidict-3.3.2.dist-info'...
Listing './lib/python3.5/site-packages/passlib'...
Listing './lib/python3.5/site-packages/passlib/_data'...
Listing './lib/python3.5/site-packages/passlib/_data/wordsets'...
Listing './lib/python3.5/site-packages/passlib/crypto'...
Listing './lib/python3.5/site-packages/passlib/crypto/_blowfish'...
Listing './lib/python3.5/site-packages/passlib/crypto/scrypt'...
Listing './lib/python3.5/site-packages/passlib/ext'...
Listing './lib/python3.5/site-packages/passlib/ext/django'...
Listing './lib/python3.5/site-packages/passlib/handlers'...
Listing './lib/python3.5/site-packages/passlib/tests'...
Listing './lib/python3.5/site-packages/passlib/utils'...
Listing './lib/python3.5/site-packages/passlib/utils/compat'...
Listing './lib/python3.5/site-packages/passlib-1.7.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pycparser'...
Listing './lib/python3.5/site-packages/pycparser/ply'...
Listing './lib/python3.5/site-packages/pycparser-2.18.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/wtforms'...
Listing './lib/python3.5/site-packages/wtforms/csrf'...
Listing './lib/python3.5/site-packages/wtforms/ext'...
Listing './lib/python3.5/site-packages/wtforms/ext/appengine'...
Listing './lib/python3.5/site-packages/wtforms/ext/csrf'...
Listing './lib/python3.5/site-packages/wtforms/ext/dateutil'...
Listing './lib/python3.5/site-packages/wtforms/ext/django'...
Listing './lib/python3.5/site-packages/wtforms/ext/django/templatetags'...
Listing './lib/python3.5/site-packages/wtforms/ext/i18n'...
Listing './lib/python3.5/site-packages/wtforms/ext/sqlalchemy'...
Listing './lib/python3.5/site-packages/wtforms/fields'...
Listing './lib/python3.5/site-packages/wtforms/locale'...
Listing './lib/python3.5/site-packages/wtforms/locale/ar'...
Listing './lib/python3.5/site-packages/wtforms/locale/ar/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/locale/ca'...
Listing './lib/python3.5/site-packages/wtforms/locale/ca/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/locale/cs_CZ'...
Listing './lib/python3.5/site-packages/wtforms/locale/cs_CZ/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/locale/cy'...
Listing './lib/python3.5/site-packages/wtforms/locale/cy/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/locale/de'...
Listing './lib/python3.5/site-packages/wtforms/locale/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/locale/de_CH'...
Listing './lib/python3.5/site-packages/wtforms/locale/de_CH/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/locale/el'...
Listing './lib/python3.5/site-packages/wtforms/locale/el/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/locale/en'...
Listing './lib/python3.5/site-packages/wtforms/locale/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/locale/es'...
Listing './lib/python3.5/site-packages/wtforms/locale/es/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/locale/et'...
Listing './lib/python3.5/site-packages/wtforms/locale/et/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/locale/fa'...
Listing './lib/python3.5/site-packages/wtforms/locale/fa/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/locale/fr'...
Listing './lib/python3.5/site-packages/wtforms/locale/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/locale/it'...
Listing './lib/python3.5/site-packages/wtforms/locale/it/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/locale/ja'...
Listing './lib/python3.5/site-packages/wtforms/locale/ja/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/locale/ko'...
Listing './lib/python3.5/site-packages/wtforms/locale/ko/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/locale/nb'...
Listing './lib/python3.5/site-packages/wtforms/locale/nb/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/locale/nl'...
Listing './lib/python3.5/site-packages/wtforms/locale/nl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/locale/pl'...
Listing './lib/python3.5/site-packages/wtforms/locale/pl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/locale/pt'...
Listing './lib/python3.5/site-packages/wtforms/locale/pt/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/locale/ru'...
Listing './lib/python3.5/site-packages/wtforms/locale/ru/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/locale/uk'...
Listing './lib/python3.5/site-packages/wtforms/locale/uk/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/locale/zh'...
Listing './lib/python3.5/site-packages/wtforms/locale/zh/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/locale/zh_TW'...
Listing './lib/python3.5/site-packages/wtforms/locale/zh_TW/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/widgets'...
Listing './lib/python3.5/site-packages/yarl'...
Listing './lib/python3.5/site-packages/yarl-0.18.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
